--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <ul class="features-list">
             <li class="features-list__item">
               <div class="features-list__item-icon">
-                <img src="./img/over.png" alt="" srcset="" />
+                <img src="https://sphaerista.github.io/landing_one/img/over.png" alt="" srcset="" />
               </div>
               <div class="features-list__item-title">Overview</div>
               <div class="features-list__item-text">
@@ -278,7 +278,7 @@
             </li>
             <li class="features-list__item">
               <div class="features-list__item-icon">
-                <img src="./img/design mandala.jpg" alt="" srcset="" />
+                <img src="https://sphaerista.github.io/landing_one/img/design mandala.jpg" alt="" srcset="" />
               </div>
               <div class="features-list__item-title">Design</div>
               <div class="features-list__item-text">
@@ -288,7 +288,7 @@
             </li>
             <li class="features-list__item">
               <div class="features-list__item-icon">
-                <img src="/img/house.jpg" alt="" srcset="" />
+                <img src="https://sphaerista.github.io/landing_one/img/house.jpg" alt="" srcset="" />
               </div>
               <div class="features-list__item-title">Visualization</div>
               <div class="features-list__item-text">
@@ -299,7 +299,7 @@
             <li class="features-list__item">
               <div class="features-list__item-icon">
                 <img
-                  src="/img/house-project-icon-on-white-vector.jpg"
+                  src="https://sphaerista.github.io/landing_one/img/house-project-icon-on-white-vector.jpg"
                   alt=""
                   srcset=""
                 />
